[gd_scene load_steps=19 format=3 uid="uid://cupqyvyyv1ru3"]

[ext_resource type="Texture2D" uid="uid://vgfxhqtrbjn5" path="res://assets/sprites/slime_green.png" id="1_1f0kj"]
[ext_resource type="Script" uid="uid://dpdh8dqoxlslo" path="res://script/enemy.gd" id="1_afpow"]
[ext_resource type="PackedScene" uid="uid://vci7wc4aopf" path="res://Scenes/potion.tscn" id="2_0830c"]
[ext_resource type="PackedScene" uid="uid://dfbvlm4t6fxp7" path="res://Scenes/kill_zone.tscn" id="2_afpow"]
[ext_resource type="PackedScene" uid="uid://cw1i3gecomf5f" path="res://Scenes/damage.tscn" id="3_ghaa6"]
[ext_resource type="PackedScene" uid="uid://cwm8i7d4vijt4" path="res://Scenes/hurtbox.tscn" id="4_287tu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_1f0kj")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_1f0kj")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_1f0kj")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_1f0kj")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("1_1f0kj")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("1_1f0kj")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("1_1f0kj")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("1_1f0kj")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("1_1f0kj")
region = Rect2(48, 54, 24, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_auwsv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uf12"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_287tu"]
size = Vector2(14, 15)

[node name="Enemy" type="Area2D"]
z_index = 2
collision_layer = 4
script = ExtResource("1_afpow")
health_item_scene = ExtResource("2_0830c")
damage_item_scene = ExtResource("3_ghaa6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_auwsv")
autoplay = "default"

[node name="KillZone" parent="." instance=ExtResource("2_afpow")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_8uf12")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-11, 0)

[node name="Hurtbox" parent="." instance=ExtResource("4_287tu")]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_287tu")

[node name="GroundRight" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, 15)

[node name="GroundLeft" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, 15)

[editable path="Hurtbox"]
